[package]
name = "stm32f3-rtc"
version = "0.1.0"


[package.metadata.docs.rs]
features = ["stm32f303xc", "rt", "usb", "can", "enumset"]
targets = ["thumbv7em-none-eabihf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
stm32f303xc = ["stm32f3xx-hal/stm32f303xc"]


[dependencies]
stm32f3xx-hal = { version = "0.10.0", optional = true }
cortex-m-semihosting = "0.5.0"
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"